# uv_ground

./: CMakeLists.txt  README (another copy).md  formake.sh  test.sh
src/: Application.cpp  CMakeLists.txt
src/configs/: debug.hpp
src/headers/src/common/bean/: bean.hpp  captureTestTimeBean.hpp  controlInformationBean.hpp  modulationConfigBean.hpp
src/headers/src/common/bram/: bram.hpp
src/headers/src/common/can/: can.hpp  canFrame.hpp
src/headers/src/common/gpio/: gpio.hpp
src/headers/src/common/iio/: iio.hpp  iioConfig.hpp
src/headers/src/common/iio/baseband/: baseband.hpp
src/headers/src/common/iio/baseband/basebandInit/: CMakeLists.txt  baseband_param_calc.c  baseband_param_calc.h  uv_config.c  uv_config.h
src/headers/src/common/iio/sync/: sync.hpp
src/headers/src/common/socket/: tcp.hpp
src/headers/src/common/thread/: threadManage.hpp
src/headers/src/service/autoTest/simulate/: satelliteSimulation.hpp
src/headers/src/service/autoTest/simulate/commands/: commands.hpp
src/headers/src/service/autoTest/simulate/commands/downlink/: downlinkRemoteData.hpp
src/headers/src/service/autoTest/simulate/commands/polling/: remotePoll.hpp  telemetryPoll.hpp
src/headers/src/service/autoTest/unitTest/captureTest/: captureTest.hpp
src/headers/src/service/autoTest/unitTest/errorRateTest/: remoteErrorRateTest.hpp  telemetryErrorRateTest.hpp
src/headers/src/service/autoTest/unitTest/errorRateTest/bitSync/: ___bitSync.hpp  bitSync.hpp  kmp.hpp  sort.hpp
src/headers/src/service/tcpServer/: tcpServer.hpp
test/: CMakeLists.txt  testApplication.cpp
test/otherTest/: restart.sh
test/src/common/bean/: testControlInformationBean.hpp  testModulationConfigBean.hpp
test/src/common/bram/: testBRAM.hpp  testFrequencySweep.hpp
test/src/common/can/: testCan.hpp
test/src/common/gpio/: testGPIO.hpp
test/src/common/iio/: synchronous.h  testIIO.hpp
test/src/common/iio/baseband/: testBaseband.hpp
test/src/common/socket/: testTcp.hpp
test/src/common/thread/: testThreadManage.hpp
test/src/service/autoTest/simulate/: testSatelliteSimulation.hpp
test/src/service/autoTest/simulate/commands/: testComands.hpp
test/src/service/autoTest/unitTest/captureTest/: testCaptureTest.hpp
test/src/service/autoTest/unitTest/errorRateTest/: testRemoteErrorRateTest.hpp  testTelemetryErrorRateTest.hpp
test/src/service/autoTest/unitTest/errorRateTest/bitSync/: testBit_SYNC.hpp  testKMP.hpp  testSORT.hpp
test/src/service/tcpServer/: testTcpServer.hpp
test/utils/catch/: CMakeLists.txt  catch.h
test/utils/log4cplus/: TestLog4cplus.hpp
test/utils/tcpClient/: CMakeLists.txt  tcpClient.cpp  tcpClient.hpp
